compiler/tests/success/namespaces/common/export.jazz
namespace a {
  export fn main(reg u32 x) -> reg u32 {
    x = x;
    return x;
  }
}

namespace b {
  export fn main(reg u32 x y) -> reg u32 {
    x = x;
    x += y;
    return x;
  }
}
