compiler/tests/fail/common/var_initialize_undecl.jazz
export fn main() -> reg u32 {
  reg u32 x = x;
  return x;
}
